[project]
name = "trassenplanung-oeffentlich"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
]
